# fea_state_machines

./: .travis.yml  CMakeLists.txt  appveyor.yml  readme.md
include/fea_state_machines/: constexpr_fsm.hpp  fea_simple_fsm.hpp  fea_simple_inlined_fsm.hpp  fsm.hpp  hfsm.hpp  inline_fsm.hpp  inlined_fsm.hpp  tmp.hpp
tests/: benchmarks.cpp  constexpr_fsm.cpp  constexpr_fsm_win.cpp  fsm.cpp  fsm_nothrow.cpp  hfsm.cpp  inline_fsm.cpp  inlined_fsm.cpp  main.cpp  simple_fsm.cpp  simple_inlined_fsm.cpp
